{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 45,
  "lineage": "0178399e-1d03-67c6-087a-309c275766b1",
  "resources": [
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4089f982524a2e6",
            "arn": "arn:aws:ec2:us-west-2:181268068448:elastic-ip/eipalloc-0f4089f982524a2e6",
            "domain": "vpc",
            "id": "eipalloc-0f4089f982524a2e6",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-185-168-253.us-west-2.compute.amazonaws.com",
            "public_ip": "54.185.168.253",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-dev-eip"
            },
            "tags_all": {
              "Name": "leelasai-dev-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:internet-gateway/igw-0cc69c7d9f904df51",
            "id": "igw-0cc69c7d9f904df51",
            "owner_id": "181268068448",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-dev-internet-gateway"
            },
            "tags_all": {
              "Name": "leelasai-dev-internet-gateway"
            },
            "vpc_id": "vpc-07f8d473f6479b102"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4089f982524a2e6",
            "association_id": "eipassoc-051e0f94272e6b7a5",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0010d833af1fa76ce",
            "network_interface_id": "eni-0e21dda49726b7e72",
            "private_ip": "10.0.1.37",
            "public_ip": "54.185.168.253",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0481736c69b1ad1ab",
            "tags": {
              "Name": "leelasai-dev-nat-gateway"
            },
            "tags_all": {
              "Name": "leelasai-dev-nat-gateway"
            },
            "vpc_id": "vpc-07f8d473f6479b102"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eip.aws_eip.nat",
            "module.public_subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0786adace1541ca80",
            "arn": "arn:aws:ec2:us-west-2:181268068448:instance/i-00fe6f0640afc01b3",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00fe6f0640afc01b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "leelasai-dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-071eb1f8376ebf531"
              }
            ],
            "primary_network_interface_id": "eni-071eb1f8376ebf531",
            "private_dns": "ip-10-0-2-81.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.81",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-051f0d87b925f373b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1515a78cd6e19b7",
            "tags": {
              "Name": "leelasai-dev-EC2-private-instance"
            },
            "tags_all": {
              "Name": "leelasai-dev-EC2-private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0134495b3c683ac0e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "i-00fe6f0640afc01b3",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.private_subnet.aws_subnet.private",
            "module.security_group.aws_security_group.security-grp",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074550440f67ddc17",
            "region": "us-west-2",
            "route_table_id": "rtb-08da3d4ff4ef9bace",
            "subnet_id": "subnet-0c1515a78cd6e19b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eip.aws_eip.nat",
            "module.nat_gw.aws_nat_gateway.nat",
            "module.private_route_table.aws_route_table.private-route-table",
            "module.private_subnet.aws_subnet.private",
            "module.public_subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:route-table/rtb-08da3d4ff4ef9bace",
            "id": "rtb-08da3d4ff4ef9bace",
            "owner_id": "181268068448",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0010d833af1fa76ce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "leelasai-dev-private-route-table"
            },
            "tags_all": {
              "Name": "leelasai-dev-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f8d473f6479b102"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "rtb-08da3d4ff4ef9bace",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.eip.aws_eip.nat",
            "module.nat_gw.aws_nat_gateway.nat",
            "module.public_subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:subnet/subnet-0c1515a78cd6e19b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1515a78cd6e19b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "181268068448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-dev-private-subnet"
            },
            "tags_all": {
              "Name": "leelasai-dev-private-subnet"
            },
            "vpc_id": "vpc-07f8d473f6479b102"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "subnet-0c1515a78cd6e19b7",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0786adace1541ca80",
            "arn": "arn:aws:ec2:us-west-2:181268068448:instance/i-08a0ff4977c2b2a82",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a0ff4977c2b2a82",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "leelasai-dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a24aaf2e0dc38b9c"
              }
            ],
            "primary_network_interface_id": "eni-0a24aaf2e0dc38b9c",
            "private_dns": "ip-10-0-1-141.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.141",
            "public_ip": "54.184.207.220",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0001456cdaba7b782",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0481736c69b1ad1ab",
            "tags": {
              "Name": "leelasai-dev-EC2-public-instance"
            },
            "tags_all": {
              "Name": "leelasai-dev-EC2-public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0134495b3c683ac0e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "i-08a0ff4977c2b2a82",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.public_subnet.aws_subnet.public",
            "module.security_group.aws_security_group.security-grp",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caa85f49e014b4c7",
            "region": "us-west-2",
            "route_table_id": "rtb-078c4efaef46281ac",
            "subnet_id": "subnet-0481736c69b1ad1ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.public_route_table.aws_route_table.route-table",
            "module.public_subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:route-table/rtb-078c4efaef46281ac",
            "id": "rtb-078c4efaef46281ac",
            "owner_id": "181268068448",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc69c7d9f904df51",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "leelasai-dev-public-route-table"
            },
            "tags_all": {
              "Name": "leelasai-dev-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f8d473f6479b102"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "rtb-078c4efaef46281ac",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:subnet/subnet-0481736c69b1ad1ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0481736c69b1ad1ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "181268068448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-dev-public-subnet"
            },
            "tags_all": {
              "Name": "leelasai-dev-public-subnet"
            },
            "vpc_id": "vpc-07f8d473f6479b102"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "subnet-0481736c69b1ad1ab",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:security-group/sg-0134495b3c683ac0e",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0134495b3c683ac0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "leelasai-dev-security-group",
            "name_prefix": "",
            "owner_id": "181268068448",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leelasai-dev-security-group"
            },
            "tags_all": {
              "Name": "leelasai-dev-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f8d473f6479b102"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "sg-0134495b3c683ac0e",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:vpc/vpc-07f8d473f6479b102",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0271c1085d3860da5",
            "default_route_table_id": "rtb-0fc5d5cdbfe52c4c4",
            "default_security_group_id": "sg-081f0e831fc925ae8",
            "dhcp_options_id": "dopt-08b5cc314f1f2d537",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f8d473f6479b102",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc5d5cdbfe52c4c4",
            "owner_id": "181268068448",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-dev-vpc"
            },
            "tags_all": {
              "Name": "leelasai-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "vpc-07f8d473f6479b102",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}